--- a/css/general.css
+++ b/css/general.css
@@ -203,8 +203,15 @@ body {
 }
 
 .slide {
-  flex: 0 0 400px;
-  height: 280px;
+  flex: 0 0 100%; /* ocupa 100% del contenedor */
+  height: 700px;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* flex: 0 0 400px;
+  height: 280px; */
   background-color: #4caf50;
   border-radius: 10px;
   display: flex;
@@ -215,10 +222,6 @@ body {
   scroll-snap-align: start; /* snap en cada slide */
   transition: transform 0.3s ease; /* efecto smooth al pasar hover */
   overflow: hidden;
-}
-
-.slide:hover {
-  transform: scale(1.05);
 }
 
 .slider-btn {
