--- a/css/queries.css
+++ b/css/queries.css
@@ -68,7 +68,7 @@
   }
 
   .hero-description p {
-    padding-top: 6rem;
+    /* padding-top: 6rem; */
     font-size: 2.8rem;
     line-height: 1.5;
   }
